# frappe_openai_integration

./: pyproject.toml
