[project]
name = "frappe_openai_integration"
authors = [
    { name = "Manav Mandli", email = "manavmandli2990@gmail.com"}
]
description = "OpenAI Integration in Frappe Framework"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "openai"
]

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<18.0.0"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
